src/objects/CPQ_NPTFormat__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>actionflowName__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>actionflowName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appId__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>appId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hostUrl__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>hostUrl</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>CPQ NPT Format</label>
</CustomObject>